--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h1 class="title">Harish</h1>
       <p class="section__text__p2">Frontend Developer</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('Harish_Resume_Word.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('Harish.pdf')">
           Download Resume
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -246,7 +246,6 @@
           <li><a href="#experience">Skill</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#Contact">Contact</a></li>
-
         </ul>
       </div>
     </nav>
@@ -254,5 +253,4 @@
   </footer>
   <script src="assets/js/script.js"></script>
 </body>
-
 </html>
