--- a/index.html
+++ b/index.html
@@ -179,16 +179,13 @@
       <div class="about-containers">
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/images/ecommerce.png" alt="Project 1" class="project-img-1" />
+            <img src="./assets/images/Django.jpg" alt="Project 1" class="project-img-1" />
           </div>
-          <h2 class="experience-sub-title project-title"> E-commerce</h2>
+          <h2 class="experience-sub-title project-title">Django E-commerce</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
-              onclick="location.href='https://github.com/Harish6578/Ecommerce'">
+              onclick="location.href='https://github.com/Harish6578/Model-Home-Furniture'">
               Github
-            </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://shoes-shop-psi.vercel.app/'">
-              Live Demo
             </button>
           </div>
         </div>
@@ -196,7 +193,7 @@
           <div class="article-container">
             <img src="./assets/images/weather.png" alt="Project 2" class="project-img-1" />
           </div>
-          <h2 class="experience-sub-title project-title">Weather App</h2>
+          <h2 class="experience-sub-title project-title">Weather Chick website</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://github.com/Harish6578/Weather-Check'">
@@ -204,6 +201,22 @@
             </button>
             <button class="btn btn-color-2 project-btn"
               onclick="location.href='https://weather-check-virid.vercel.app/'">
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="details-container color-container">
+          <div class="article-container">
+            <img src="./assets/images/whatsapp.jpg" alt="Project 2" class="project-img-1" />
+          </div>
+          <h2 class="experience-sub-title project-title">React Whatsapp Clone</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://github.com/Harish6578/Whatsapp-clone'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn"
+              onclick="location.href='https://whatsapp-clone-ruddy-two.vercel.app'">
               Live Demo
             </button>
           </div>
