--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
       <div class="about-containers">
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/images/Django.jpg" alt="Project 1" class="project-img-1" />
+            <img src="./assets/images/furniture.jpeg" alt="Project 1" class="project-img-1" />
           </div>
           <h2 class="experience-sub-title project-title">Django E-commerce</h2>
           <div class="btn-container">
